apps/multimedia/manifests/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: default
    metallb.universe.tf/allow-shared-ip: multimedia-svc
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/part-of: prowlarr
    app.kubernetes.io/version: 1.10.5.4116-ls41
  name: prowlarr
  namespace: multimedia
spec:
  externalTrafficPolicy: Cluster
  loadBalancerIP: 192.168.2.95
  ports:
    - name: http
      port: 9696
      protocol: TCP
      targetPort: http
    - name: metrics
      port: 9709
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/part-of: prowlarr
  sessionAffinity: None
  type: LoadBalancer
