apps/multimedia/manifests/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    reloader.homer/group: Multimedia
    reloader.homer/logo: https://avatars.githubusercontent.com/u/73049443?s=200&v=4
    reloader.homer/name: Prowlarr
    reloader.homer/subtitle: Indexer/proxy management
    reloader.homer/tag: local
  labels:
    probe: enabled
    reloader.homer/enabled: "true"
  name: prowlarr
  namespace: multimedia
spec:
  ingressClassName: private
  rules:
    - host: prowlarr.ankhmorpork.thaum.xyz
      http:
        paths:
          - backend:
              service:
                name: prowlarr
                port:
                  number: 9696
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - prowlarr.ankhmorpork.thaum.xyz
      secretName: prowlarr-ankhmorpork-thaum-xyz-tls
